# account-management/src/main/java/com/api/account/management/repositories/TransacoesRepository.java
@@ -1,8 +1,10 @@
 package com.api.account.management.repositories;
 
+import java.util.Date;
 import java.util.List;
 
 import org.springframework.data.jpa.repository.JpaRepository;
+import org.springframework.data.jpa.repository.Query;
 import org.springframework.stereotype.Repository;
 
 import com.api.account.management.models.Contas;
@@ -12,5 +14,8 @@ import com.api.account.management.models.Transacoes;
 public interface TransacoesRepository extends JpaRepository<Transacoes, Integer> {
 	
 	List<Transacoes> findByConta(Contas conta);
+	
+	@Query("select t from Transacoes t where conta.idConta = ?1 and t.dataTransacao >= ?2")
+	List<Transacoes> findByContaPeriodo(Integer idConta, Date dataInicio);
 
 }
